			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04b: *********************************

BUG: (10/13/05, GVG) Exception in ColorPatternPanel when li.outlinePatternDisplay was null (eg SPECIAL:TEXT) (Bug #644)
FIX: Skip setting of outlinePatternDisplay in that case.

IMP/MAN: (10/13/05, JKG) Added Window Menu items to go back/forward between saved views of EditWindow.

BUG: (10/12/05, GVG) Cadence preferences can't be imported on Mac OS X (Sun menu) (Bug #643)
FIX: Change InputStream(String) by InputStream(URL) so Cadence file available in electric.jar can be open.

BUG: (10/12/05, SMR) Unnecessary resize of GetMultiInfo (bug #641)
FIX: Preserve size of scroll area in GetInfoMulti.highlightChanged().

IMP/MAN: (10/12/05, SMR) "Artwork Appearance" now called "Artwork Color and Pattern".
     The dialog is modeless.  Instead of having color popups in the node and arc
     Properties dialogs, there is a "Color and Patterns" button.

BUG: (10/12/05, GVG) Unnecessary resize of GetMultiInfo (bug #641)
FIX: Remove lock in GetInfoMulti.highlightChanged().

IMP: (10/11/05, GVG) Size and Tech labels in StatusBar disappear if window is not big enough (Bug #628).

IMP/MAN: (10/11/05, SMR) Pad Frame generator now handles view types properly (Bug #621).
     Also, pad frame generator has a "views" command to specify views to generate.

IMP: (10/11/05, SMR) Old outline textures are now used in the new scheme.

BUG: (10/11/05, SMR) Multi-object properties doesn't understand rotated transistors (Bug #626).
FIX: Rotated transistors are handled properly.

BUG: (10/11/05, SMR) Non-centered text on rotated nodes doesn't select properly (Bug #536).
FIX: In Highlighter.findAllInArea(), transform text area after precisely defining it.

BUG: (10/11/05, SMR) Rotated text with multiple lines draws badly (Bug #629).
FIX: Improved location computation, highlighting, and rendering.
